<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/unu"
        android:layout_width="347dp"
        android:layout_height="354dp"
        android:layout_marginBottom="430dp"
        android:contentDescription="@string/unu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/un" />

    <ImageView
        android:id="@+id/user"
        android:layout_width="66dp"
        android:layout_height="73dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="280dp"
        android:contentDescription="@string/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/MasukanUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unu"
        app:srcCompat="@drawable/user" />

    <ImageView
        android:id="@+id/password"
        android:layout_width="91dp"
        android:layout_height="88dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="250dp"
        android:contentDescription="@string/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/MasukanPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:srcCompat="@drawable/ps" />

    <EditText
        android:id="@+id/MasukanUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/masukan_username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user"
        android:autofillHints="" />

    <EditText
        android:id="@+id/MasukanPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:hint="@string/masukan_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MasukanPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>