<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".DashboardActivity">


    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gambar"
        android:layout_width="173dp"
        android:layout_height="270dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="430dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/un" />

    <TextView
        android:id="@+id/knowledge"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="500dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/knewave"
        android:text="@string/knowledge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gambar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/faith"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="400dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/knewave"
        android:text="@string/faith"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gambar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wisdom"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="280dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/knewave"
        android:text="@string/wisdom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gambar"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profil"
        android:layout_width="103dp"
        android:layout_height="89dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="230dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gambar"
        app:srcCompat="@drawable/ic_profil" />

    <ImageView
        android:id="@+id/sms"
        android:layout_width="111dp"
        android:layout_height="86dp"
        android:layout_marginBottom="230dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profil"
        app:layout_constraintTop_toBottomOf="@+id/gambar"
        app:srcCompat="@drawable/ic_sms" />

    <ImageView
        android:id="@+id/net"
        android:layout_width="103dp"
        android:layout_height="102dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profil"
        app:srcCompat="@drawable/ic_net" />

    <ImageView
        android:id="@+id/ecam"
        android:layout_width="132dp"
        android:layout_height="110dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/net"
        app:layout_constraintTop_toBottomOf="@+id/sms"
        app:srcCompat="@drawable/ic_ecam" />

</androidx.constraintlayout.widget.ConstraintLayout>